2008-12-02 Alexander Malysh <amalysh at kannel.org>
    * test/drive_smpp.c, test/drive_smpp.conf: added user defined TLV to config
      and send TLV in drive_smpp. This allow us check whether TLV & meta-data
      works as expected.

2008-12-02 Alexander Malysh <amalysh at kannel.org>
    * gw/smsc/smpp_pdu.c: allow passing SMPP spec defined TLVs to meta-data.

2008-12-02 Alexander Malysh <amalysh at kannel.org>
(CB) * gw/bb_alog.c: added %D and META: to acess log

2008-11-25 Alexander Malysh <amalysh at kannel.org>
    * gw/smsbox.c: escape string values in the XML document for MO messages.
      Thanks to Michael Zervakis <michael at zervakis.com> for pointing to this issue.

2008-11-19 Alexander Malysh <amalysh at kannel.org>
    * gwlib/log.c: fixed double close/free in log_close_all().
      Thanks to Werner Coetzee <werner.coetzee at clickatell.com> for pointing
      to the issue.

2008-11-19 Alexander Malysh <amalysh at kannel.org>
    * debian/kannel.init: apllied patch that replace usage of run_kannel_box
      with kannel oprions --daemonize.
      Thanks to Alan McNatty <alan at catalyst.net.nz> for this patch.
      [Msg-ID: <4922140B.3000803@catalyst.net.nz>]

2008-11-17 Alexander Malysh <amalysh at kannel.org>
    * gw/smsc/smsc_at.c: wait OK after issuing AT+CNMA-command.
      Thanks to matti.armanen at sci.fi for the patch.
      [Msg-ID: 491E905E.908@sci.fi]

2008-10-22  Stipe Tolj  <stolj at kannel.org>
    * test/test_ota.c: write the binary ota_compile() output block to a file
      cleanly.
       
2008-10-22  Stipe Tolj  <stolj at kannel.org>
    * gw/ota_compiler.c: re-order INLINE attributs in oma_ota_attributes struct
      to fit the order in the spec tables. NLC.

2008-10-21  Stipe Tolj  <stolj at kannel.org>
    * gw/smsc/smsc_smpp.c: fix possible segfaults in handle_pdu(), where we 
      don't access the resp PDU structure correctly in the case of shutdown
      phase.

2008-10-20  Stipe Tolj  <stolj at kannel.org>